--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.25.0",
-    "appwrite": "^14.0.0",
+    "appwrite": "13.0.2",
     "axios": "^1.6.7",
+    "browser-video-thumbnail-generator": "^1.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
@@ -31,6 +32,7 @@
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "video-thumbnails-generator": "^1.1.2",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
